log
Wed, Mar 26, 2025  8:26:20 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:40:39 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b16b15
Wed, Mar 26, 2025  8:43:49 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
4e39e52
Wed, Mar 26, 2025  8:46:15 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
389c3b8
Wed, Mar 26, 2025  8:48:29 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:47:12: error: 'List' {aka 'struct List'} has no member named 'next'
   47 |     if(list->next == NULL)
      |            ^~
Compilation failed
94d1dce
Wed, Mar 26, 2025  8:51:21 AM: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:48:15: error: 'List' {aka 'struct List'} has no member named 'next'
   48 |     while(list->next != NULL)
      |               ^~
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
76865f6
Wed, Mar 26, 2025  8:51:37 AM: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
8b2c618
Wed, Mar 26, 2025  8:58:07 AM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
cabe413
